--- a/Resources/views/Job/details.html.twig
+++ b/Resources/views/Job/details.html.twig
@@ -154,7 +154,7 @@
                     {% set _display_code_snippet = _is_first_user_code and ('/vendor/' not in trace.file) and ('/var/cache/' not in trace.file) and (trace.file is not empty) %}
                     {% if _display_code_snippet %}{% set _is_first_user_code = false %}{% endif %}
                     <div class="trace-line">
-                        {{ include('@Twig/Exception/trace.html.twig', { prefix: index, i: i, trace: trace, _display_code_snippet: _display_code_snippet }, with_context = false) }}
+                        {{ include('@Twig/Exception/trace.html.twig', { prefix: index, i: i, trace: trace, _display_code_snippet: _display_code_snippet, style: 'display' }, with_context = false) }}
                     </div>
                 {% endfor %}
             </div>
